--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "clean": "cd android && gradlew clean"
   },
   "dependencies": {
     "react": "17.0.2",
     "react-native": "0.67.0",
+    "react-native-markdown-display": "^7.0.0-alpha.2",
     "react-native-paper": "^4.11.2",
     "react-native-size-matters": "^0.4.0"
   },
